# finance-term

./: Cargo.toml  README.md
src/: app.rs  data_source.rs  draw.rs  main.rs  theme.rs  widget.rs
src/widget/: mod.rs  stock.rs
