[package]
name = "finance-term"
version = "0.1.0"
authors = ["Join.G <joinhack@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
lazy_static = "1.4.0"
tui = { version = "0.14", default-features = false, features = ["crossterm","serde"] }
