[package]
name = "finance-term"
version = "0.1.0"
authors = ["Join.G <joinhack@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
lazy_static = "1.4.0"
tui = { version = "0.14", default-features = false, features = ["crossterm","serde"] }
websocket-lite = {version = "0.5.0", features = ["ssl-native-tls"]}
tokio = {version = "1.5", features = ["net", "rt"]}
futures = "0.3"
serde = "1"
log = "0.4"
serde_json = "1.0"
flate2 = {version = "1.0"}
crossbeam-channel = "0.5"

[profile.dev]
debug = true
rpath = false
overflow-checks = false